2007-04-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (safe_execfile): add a safeguard under Win32 to
	protect against a bug in Python's execfile().  Closes #123.

2007-04-01  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (split_user_input): ensure that when splitting
	user input, the part that can be treated as a python name is pure
	ascii (Python identifiers MUST be pure ascii).  Part of the
	ongoing Unicode support work.

	* IPython/Prompts.py (prompt_specials_color): Add \N for the
	actual prompt number, without any coloring.  This allows users to
	produce numbered prompts with their own colors.  Added after a
	report/request by Thorsten Kampe <thorsten-AT-thorstenkampe.de>.

2007-03-31  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: Map the return key
	to enter() and shift-return to enterattr().

2007-03-30  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_psearch): add unicode support by
	encoding to ascii the input, since this routine also only deals
	with valid Python names.  Fixes a bug reported by Stefan.

2007-03-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (_inspect): convert unicode input into ascii
	before trying to evaluate it as a Python identifier.  This fixes a
	problem that the new unicode support had introduced when analyzing
	long definition lines for functions.

2007-03-24  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: Fix picking. Using
	igrid with wxPython 2.6 and -wthread should work now.
	igrid.display() simply tries to create a frame without
	an application. Only if this fails an application is created.

2007-03-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/path.py: Updated to version 2.2.

2007-03-23  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: recursive alias expansion now works better, so that
	cases like 'top' -> 'd:/cygwin/top' -> 'ls :/cygwin/top'